[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/sprites/skybox_sideHills.png" type="Texture" id=1]
[ext_resource path="res://Assets/sprites/dirt_grass.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/sprites/trunk_mid.png" type="Texture" id=7]

[node name="Game" type="Node" groups=[
"Game",
]]
script = ExtResource( 5 )
Player_Scene = ExtResource( 3 )
Other_Player_Scene = ExtResource( 3 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( 648, 448 )
scale = Vector2( 2.5737, 2.5737 )
texture = ExtResource( 1 )

[node name="Dead_Tree" type="Sprite" parent="."]
visible = false
position = Vector2( 641.784, 561.594 )
scale = Vector2( 0.793493, 0.885958 )
texture = ExtResource( 7 )

[node name="Tree" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 671 )

[node name="Ground" type="Node2D" parent="."]

[node name="Tile" type="Sprite" parent="Ground"]
position = Vector2( 64, 672 )
texture = ExtResource( 2 )

[node name="Tile2" type="Sprite" parent="Ground"]
position = Vector2( 192, 672 )
texture = ExtResource( 2 )

[node name="Tile4" type="Sprite" parent="Ground"]
position = Vector2( 320, 672 )
texture = ExtResource( 2 )

[node name="Tile3" type="Sprite" parent="Ground"]
position = Vector2( 448, 672 )
texture = ExtResource( 2 )

[node name="Tile6" type="Sprite" parent="Ground"]
position = Vector2( 576, 672 )
texture = ExtResource( 2 )

[node name="Tile5" type="Sprite" parent="Ground"]
position = Vector2( 704, 672 )
texture = ExtResource( 2 )

[node name="Tile12" type="Sprite" parent="Ground"]
position = Vector2( 832, 672 )
texture = ExtResource( 2 )

[node name="Tile11" type="Sprite" parent="Ground"]
position = Vector2( 960, 672 )
texture = ExtResource( 2 )

[node name="Tile10" type="Sprite" parent="Ground"]
position = Vector2( 1088, 672 )
texture = ExtResource( 2 )

[node name="Tile9" type="Sprite" parent="Ground"]
position = Vector2( 1216, 672 )
texture = ExtResource( 2 )

[node name="Timer_Joc" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Position_R" type="Position2D" parent="."]
position = Vector2( 1280.03, 609.004 )

[node name="Position_L" type="Position2D" parent="."]
position = Vector2( 0.871, 609.004 )
scale = Vector2( -1, 1 )

[node name="Timer_Spawner" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Timer_Title" type="Timer" parent="."]
[connection signal="timeout" from="Timer_Joc" to="." method="_on_Timer_Joc_timeout"]
[connection signal="timeout" from="Timer_Spawner" to="." method="_on_Timer_Spawner_timeout"]
[connection signal="timeout" from="Timer_Title" to="." method="_on_Timer_Title_timeout"]
